--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.5",
+    "@angular/localize": "^9.0.6",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.10.0",
+    "firebase-admin": "^8.9.2",
+    "firebase-functions": "^3.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
