--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "firebase": "^7.10.0",
     "firebase-admin": "^8.9.2",
     "firebase-functions": "^3.3.0",
-    "ng2-validation": "^4.2.0",
+    "ngx-custom-validators": "^9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
